--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@types/prop-types": "^15.7.3",
     "@types/react-icons": "^3.0.0",
-    "@types/react-transition-group": "^4.4.1"
+    "@types/react-transition-group": "^4.4.1",
+    "prettier": "2.3.1"
   }
 }
